# memfault_cellular_demo

./: CMakeLists.txt  prj.conf  west.yml
src/: main.c
